{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 40,
  "lineage": "405a4096-3ef8-e519-0acd-55bbe6cc1e08",
  "resources": [
    {
      "module": "module.data_stores",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:security-group/sg-05a6dfede8ec9a09f",
            "description": "Allow inbound access from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a6dfede8ec9a09f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9098
              }
            ],
            "name": "nifty50-trading-dev-msk-sg",
            "name_prefix": "",
            "owner_id": "374760308221",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.data_stores",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:security-group/sg-0f2fc04e8acca4252",
            "description": "Allow inbound access from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2fc04e8acca4252",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "nifty50-trading-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "374760308221",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.data_stores",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:security-group/sg-0691664ff57455ce9",
            "description": "Allow inbound access from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0691664ff57455ce9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "nifty50-trading-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "374760308221",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9a61d96b1e009b0",
            "arn": "arn:aws:ec2:us-east-1:374760308221:elastic-ip/eipalloc-0c9a61d96b1e009b0",
            "domain": "vpc",
            "id": "eipalloc-0c9a61d96b1e009b0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-76-181.compute-1.amazonaws.com",
            "public_ip": "3.216.76.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nifty50-trading-dev-nat-eip"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:internet-gateway/igw-0d740a165af5ee82c",
            "id": "igw-0d740a165af5ee82c",
            "owner_id": "374760308221",
            "tags": {
              "Name": "nifty50-trading-dev-igw"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-igw"
            },
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9a61d96b1e009b0",
            "association_id": "eipassoc-03ab8bc5050738c9b",
            "connectivity_type": "public",
            "id": "nat-000791ce307bbd310",
            "network_interface_id": "eni-0015f35960c0f9946",
            "private_ip": "10.0.1.115",
            "public_ip": "3.216.76.181",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a4540da7b941b199",
            "tags": {
              "Name": "nifty50-trading-dev-nat"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:route-table/rtb-009caf3dbfa022db7",
            "id": "rtb-009caf3dbfa022db7",
            "owner_id": "374760308221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000791ce307bbd310",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nifty50-trading-dev-private-rt"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:route-table/rtb-03997814a58bab6aa",
            "id": "rtb-03997814a58bab6aa",
            "owner_id": "374760308221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d740a165af5ee82c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nifty50-trading-dev-public-rt"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0571db3bf18d1038d",
            "route_table_id": "rtb-009caf3dbfa022db7",
            "subnet_id": "subnet-0d69229a758884e31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f8d6e4124c78724",
            "route_table_id": "rtb-009caf3dbfa022db7",
            "subnet_id": "subnet-006d87143250dcb75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014f1ad9c6027275b",
            "route_table_id": "rtb-03997814a58bab6aa",
            "subnet_id": "subnet-0a4540da7b941b199"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c22fba9441162680",
            "route_table_id": "rtb-03997814a58bab6aa",
            "subnet_id": "subnet-03f7330705b22f72d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:subnet/subnet-0d69229a758884e31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d69229a758884e31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374760308221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nifty50-trading-dev-private-1",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-private-1",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:subnet/subnet-006d87143250dcb75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006d87143250dcb75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374760308221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nifty50-trading-dev-private-2",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-private-2",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:subnet/subnet-0a4540da7b941b199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4540da7b941b199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374760308221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nifty50-trading-dev-public-1",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-public-1",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:subnet/subnet-03f7330705b22f72d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f7330705b22f72d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374760308221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nifty50-trading-dev-public-2",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nifty50-trading-dev-public-2",
              "kubernetes.io/cluster/nifty50-trading": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054dc45b5e043a18d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374760308221:vpc/vpc-054dc45b5e043a18d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c08b864ad73b93c",
            "default_route_table_id": "rtb-02e6eeaf841e626c2",
            "default_security_group_id": "sg-032e5459c9d21dd84",
            "dhcp_options_id": "dopt-056101a9d881da7bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054dc45b5e043a18d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e6eeaf841e626c2",
            "owner_id": "374760308221",
            "tags": {
              "Environment": "dev",
              "Name": "nifty50-trading-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nifty50-trading-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}